Agrega README del TP de JPQL